	* fixed bug when allow_multiple_connections_per_ip was enabled
	* fixed UPnP shutdown issue
	* no peers from tracker when stopping is no longer an error

release 0.14.12

	* fixed windows build

release 0.14.11

	* vs 2010 compiler fixes
	* updated compiler to msvc 2008 for python binding
	* fixed SOCKS5 bug for routing UDP packets
	* fixed bug on windows when verifying resume data for a torrent where
	  one of its directories had been removed
	* fixed race condition in peer-list with DHT
	* fixed rare crash when purging the peer list
	* fixed race condition around m_abort in session_impl
	* fixed bug in metadata extensions combined with encryption
	* fixed bug in bdecoder when decoding invalid messages
	* back-ported IP filter support for trackers
	* fixed add_node python binding
	* fixed bug in udp tracker scrape response parsing

release 0.14.10

	* fixed udp tracker race condition
	* fixed error handling with torrents with invalid piece sizes
	* added support for torrents with odd piece sizes
	* fixed issue with disk read cache not being cleared when removing torrents
	* made the DHT socket bind to the same interface as the session
	* fixed issue where an http proxy would not be used on redirects
	* Solaris build fixes
	* disabled buggy disconnect_peers feature

release 0.14.9

	* disabled feature to drop requests after having been skipped too many times
	* fixed range request bug for files larger than 2 GB in web seeds
	* don't crash when trying to create torrents with 0 files
	* fixed big_number __init__ in python bindings
	* fixed optimistic unchoke timer
	* fixed bug where torrents with incorrectly formatted web seed URLs would be
	  connected multiple times
	* fixed MinGW support
	* fixed DHT bootstrapping issue
	* fixed UDP over SOCKS5 issue
	* added support for "corrupt" tracker announce
	* made end-game mode less aggressive

release 0.14.8

	* ignore unkown metadata messages
	* fixed typo that would sometimes prevent queued torrents to be checked